# polyrust-core

./: .gitignore  Cargo.toml
bins/pm-smoke-cli/: Cargo.toml
bins/pm-smoke-cli/src/: main.rs
crates/polymarket-adapter/: Cargo.toml
crates/polymarket-adapter/src/: lib.rs  types.rs
crates/polymarket-adapter/src/gamma/: client.rs  mod.rs  resolver.rs  switch.rs
crates/polymarket-adapter/src/httpws/: auth.rs  mod.rs  rest.rs  ws_market.rs  ws_user.rs
crates/polymarket-adapter/src/rsclob/: client.rs  mod.rs
docs/: EXTERNAL-POLYMARKET_CONTRACT.md  SMOKE_WS_MARKET_ACCEPTANCE.md  run-smoke.md
scripts/: smoke_ws_assert.sh
